<resources>
    <string name="app_name">LConfig</string>
    <string name="action_settings">Settings</string>
    <string name="action_ClearBD">ClearBD</string>
    <string name="action_CopyDB">Synchronize</string>
    <string name="action_Firstlauch">Introduce</string>
    <string name="Show_All">Show all devices on map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_server">Server URL</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">This login name is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_type">Type of device</string>
    <string name="prompt_devEUI">Device EUI</string>
    <string name="prompt_appEUI">App EUI</string>
    <string name="prompt_outType">Type output</string>
    <string name="prompt_isSync">Synchronized</string>
    <string name="prompt_gps_latitude">Latitude</string>
    <string name="prompt_gps_longitude">Longitude</string>
    <string name="prompt_appSKey">App session key</string>
    <string name="prompt_nwkSKey">Net session key</string>
    <string name="prompt_devAdr">Local address</string>
    <string name="prompt_nwkID">Network ID</string>
    <string name="prompt_appKey">App code</string>
    <string name="prompt_date">Time of Change</string>
    <string name="prompt_comment">A comment</string>
    <string name="title_activity_add_edit">Edit</string>


    <!-- Strings related to Settings

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
        history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array> -->
    <string-array name="serviceList">
        <item>net868.ru</item>
        <item>Вега</item>
    </string-array>
    <!-- Example settings for Data & Sync
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string> -->

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="Synchronized">Synchronized:</string>
    <string name="action_addedit">Add</string>
    <string name="prompt_isotaa">Over the Air Activation</string>
    <string name="label_isotaa">OTAA</string>
    <string name="prompt_typeService">Type of service</string>
    <string name="more">More fields</string>
    <string name="type_device_is">Type is</string>
    <string name="out_type_device_is">Out type is</string>
    <string name="label_latitude">Latitude</string>
    <string name="label_degree_comma">\u00B0,</string>
    <string name="label_degree">\u00B0</string>
    <string name="nootaa">OTAA isn\'t on</string>
    <string name="yesotta">OTAA is on</string>
    <string name="identification">Identification</string>
    <string name="network_label">Network</string>
    <string name="security_label">Security</string>
    <string name="additionalInformation">Additional Information</string>


    <string-array name="controller_type_list">
        <item>LC501</item>
        <item>LC502</item>
        <item>LC503</item>
        <item>TEST</item>
    </string-array>
    <string-array name="out_type_list">
        <item>PWM</item>
        <item>DALI</item>
        <item>0-10V</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="pref_JUG_SYSTEMA">74E14A4F</string>
    <string name="action_gps">GPS</string>
    <string name="dont_leave_phone">Don\'t leave your phone from device </string>
    <string name="reads_data">Data is reading</string>
    <string name="TagDetected">Tag detected.</string>
    <string name="TouchToDevice">Apply to device!</string>
    <string name="ERRORFileTransfer">ERROR File Transfer!</string>
    <string name="TransferStop">ERROR File Transfer! Cancel.</string>
    <string name="WriteSucessfull">Successfully recorded</string>
    <string name="Incorrect">Invalid CRC or a new device</string>
    <string name="DetectInternetConnection">Is connected</string>
    <string name="ConnectivityChange">Is disconnected</string>
    <string name="Invalid_login_or_password">Invalid login or password</string>
    <string name="incorrectlyToken">Incorrectly token!</string>
    <string name="AddService">Check connection data!</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello</string>
    <string name="slide_1_desc">Please read short guide about this application</string>

    <string name="slide_2_title">Step 1</string>
    <string name="slide_2_desc">Tap on application button or apply to NFC device</string>

    <string name="slide_3_title">Step 2</string>
    <string name="slide_3_desc">Input some data.</string>

    <string name="slide_4_title">Step 3</string>
    <string name="slide_4_desc">Write data by tap on application button</string>

    <string name="slide_5_title">Step 4</string>
    <string name="slide_5_desc">Wait until the data is recorded!</string>

    <string name="slide_6_title">Step 5</string>
    <string name="slide_6_desc">Choose service type by tap on Setting from menu</string>


    <string name="slide_7_title">Step 6</string>
    <string name="slide_7_desc">Tap on Syncronize from menu for send data to choosed servise(need internet).</string>

    <string name="slide_8_title">Step 7</string>
    <string name="slide_8_desc">If you need adding some changes to exist device, just touch to device being in the main
        windows. Then you will need synchronize data.
    </string>


    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear
        data
    </string>
    <string name="play_again">Play Again</string>
    <!-- Error message for check AddEditActivity -->
    <string name="AppEUI_error">Must be 16 HEX numbers!</string>
    <string name="AppCode_error">Must be 32 HEX numbers!</string>
    <string name="NetworkID_error">Must be 8 HEX numbers!</string>
    <string name="LocalAddress_error">Must be 8 HEX numbers!</string>
    <string name="NetSessionKey_error">Must be 32 HEX numbers!</string>
    <string name="AppSessionKey_error">Must be 32 HEX numbers!</string>
    <string name="no_device">No devices for view</string>
    <string name="promt_token">Token</string>
    <string name="promt_login">login</string>
    <string name="promt_pass">pass</string>


</resources>
