<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="ru.yugsys.vvvresearch.lconfig.views.MainActivity">
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_CopyDB"
          android:title="@string/action_CopyDB"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/action_Firstlauch"
          android:title="@string/action_Firstlauch"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item android:id="@+id/show_All"
          android:title="@string/Show_All"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>
