<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/add_edit_form"
        tools:context="ru.yugsys.vvvresearch.lconfig.views.AddEditActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <EditText
                    android:id="@+id/lc5_edit_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_type"
                    android:maxLines="1"
            />


            <EditText
                    android:id="@+id/lc5_edit_deveui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_devEUI"
                    android:maxLines="1"
            />

            <EditText
                    android:id="@+id/lc5_edit_appEUI"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_appEUI"
                    android:maxLines="1"
            />
            <EditText
                    android:id="@+id/lc5_edit_appKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_appKey"
                    android:maxLines="1"
            />
            <EditText
                    android:id="@+id/lc5_edit_nwkID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_nwkID"
                    android:maxLines="1"
            />
            <EditText
                    android:id="@+id/lc5_edit_devAdr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_devAdr"
                    android:maxLines="1"
            />
            <EditText
                    android:id="@+id/lc5_edit_nwkSKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_nwkSKey"
                    android:maxLines="1"
            />
            <EditText
                    android:id="@+id/lc5_edit_appSKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_appSKey"
                    android:maxLines="1"
            />
            <EditText
                    android:id="@+id/lc5_edit_isOTAA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_appSKey"
                    android:maxLines="1"
            />
            <EditText
                    android:id="@+id/lc5_edit_gps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_gps"
                    android:maxLines="1"
            />
            <EditText
                    android:id="@+id/lc5_edit_out_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_outType"
                    android:maxLines="1"
            />
            <Button
                    android:id="@+id/action_add_edit"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_addedit"
                    android:textStyle="bold"/>
        </LinearLayout>



        
    </ScrollView>
</android.support.constraint.ConstraintLayout>
