<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="ru.yugsys.vvvresearch.lconfig.views.MainActivity">
    <ScrollView
            android:id="@+id/lc5_scrollViewFull"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
    >
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/marginCard"
        >
            <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    app:columnCount="5"
                    app:orientation="horizontal"
            >

                <TextView
                        android:text="@string/type_device_is"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.SubHead"
                />
                <Spinner
                        android:id="@+id/lc5_spinner_type"
                        android:hint="@string/prompt_type"
                        android:entries="@array/controller_type_list"
                        app:layout_column="4"
                        app:layout_columnSpan="1"
                        app:layout_gravity="end"
                />
                <TextView
                        android:text="@string/out_type_device_is"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.SubHead"
                />
                <Spinner
                        android:id="@+id/lc5_spinner_out_type"
                        android:hint="@string/prompt_outType"

                        android:entries="@array/out_type_list"
                        app:layout_column="4"
                        app:layout_columnSpan="1"
                        app:layout_gravity="end"
                />
                <TextView
                        android:text="@string/label_isotaa"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.SubHead"
                />

                <Switch
                        android:id="@+id/lc5_switch_isOTAA"
                        android:switchPadding="@dimen/marginCard"
                        android:checked="false"
                        app:layout_column="4"
                        app:layout_columnSpan="1"
                        app:layout_gravity="end"
                />


                <EditText
                        android:id="@+id/lc5_edit_gps_latitude"
                        android:hint="@string/prompt_gps_latitude"
                        android:inputType="numberDecimal"
                        style="@style/BaseTextView.Body"
                />
                <TextView
                        android:text="@string/label_degree_comma"
                        style="@style/BaseTextView.Body"
                />

                <EditText
                        android:id="@+id/lc5_edit_gps_longitude"
                        android:hint="@string/prompt_gps_longitude"
                        android:inputType="numberDecimal"
                        style="@style/BaseTextView.Body"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_devEUI"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.Caption.Expandable"
                />

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/lc5_edit_deveui"
                        android:hint="@string/prompt_devEUI"
                        style="@style/BaseEditable.Body.EditHEX"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_appEUI"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.Caption.Expandable"
                />
                <EditText
                        android:id="@+id/lc5_edit_appEUI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_appEUI"
                        style="@style/BaseEditable.Body.EditHEX"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_appKey"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.Caption.Expandable"
                />
                <EditText
                        android:id="@+id/lc5_edit_appKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_appKey"
                        style="@style/BaseEditable.Body.EditHEX"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_nwkID"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.Caption.Expandable"
                />
                <EditText
                        android:id="@+id/lc5_edit_nwkID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_nwkID"
                        style="@style/BaseEditable.Body.EditHEX"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_devAdr"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.Caption.Expandable"
                />
                <EditText
                        android:id="@+id/lc5_edit_devAdr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_devAdr"
                        style="@style/BaseEditable.Body.EditHEX"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_nwkSKey"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.Caption.Expandable"
                />
                <EditText
                        android:id="@+id/lc5_edit_nwkSKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_nwkSKey"
                        style="@style/BaseEditable.Body.EditHEX"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_appSKey"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.Caption.Expandable"
                />
                <EditText
                        android:id="@+id/lc5_edit_appSKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_appSKey"
                        style="@style/BaseEditable.Body.EditHEX"
                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_comment"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.Caption.Expandable"
                />
                <EditText
                        android:id="@+id/lc5_edit_comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_comment"

                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/prompt_date"
                        app:layout_column="0"
                        app:layout_columnSpan="4"
                        style="@style/BaseTextView.Caption.Expandable"
                />
                <EditText
                        android:id="@+id/lc5_date1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_comment"

                />

            </android.support.v7.widget.GridLayout>

        </android.support.v7.widget.CardView>

    </ScrollView>
</RelativeLayout>