<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context="ru.yugsys.vvvresearch.lconfig.views.MainActivity">

    <android.support.v7.widget.CardView
            android:id="@+id/lc5_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/marginCardBottom"
            android:layout_marginTop="@dimen/marginCardTop"
            android:layout_marginRight="@dimen/marginCard"
            android:layout_marginLeft="@dimen/marginCard"
            android:elevation="@dimen/cardElevation"
            tools:context="ru.yugsys.vvvresearch.lconfig.views.MainActivity">
        <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                app:columnCount="8"
                app:orientation="horizontal"
        >
            <ImageView
                    android:id="@+id/imageView"
                    app:srcCompat="@mipmap/lc503"
                    android:layout_height="96dp"
                    android:layout_width="96dp"
                    app:layout_column="0"
                    app:layout_columnSpan="3"
                    app:layout_row="0"
                    app:layout_rowSpan="5"
                    app:layout_gravity="center_vertical"
            />


            <TextView
                    android:id="@+id/lc5_type"
                    app:layout_gravity="fill"
                    app:layout_column="3"
                    app:layout_columnSpan="5"
                    app:layout_row="0"
                    app:layout_rowSpan="1"
                    android:hint="@string/prompt_type"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            />

            <TextView
                    android:id="@+id/lc5_gps_latitude"
                    app:layout_gravity="center_vertical|left"
                    app:layout_column="3"
                    app:layout_columnSpan="1"
                    app:layout_row="1"
                    app:layout_rowSpan="1"
                    android:text="33.1565"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            />
            <TextView
                    android:text="@string/label_degree_comma"
                    app:layout_column="4"
                    app:layout_columnSpan="1"
                    app:layout_row="1"
                    app:layout_rowSpan="1"
                    app:layout_gravity="center_vertical|left"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            />
            <TextView
                    android:id="@+id/lc5_gps_longitude"
                    app:layout_gravity="center_vertical|left"
                    app:layout_column="3"
                    app:layout_columnSpan="1"
                    app:layout_row="2"
                    app:layout_rowSpan="1"
                    android:text="179.1565"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            />

            <TextView
                    android:text="@string/label_degree"
                    app:layout_column="4"
                    app:layout_columnSpan="1"
                    app:layout_row="2"
                    app:layout_rowSpan="1"
                    app:layout_gravity="center_vertical|left"
                    android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            />
            <ImageButton
                    android:gravity="right"
                    android:src="@drawable/ic_location_on_black_48dp"
                    app:layout_column="7"
                    app:layout_columnSpan="1"
                    app:layout_row="1"
                    app:layout_rowSpan="2"
                    android:background="#00000000"
                    app:layout_gravity="center_vertical|left"
            />
            <TextView
                    android:id="@+id/lc5_isOTAA"
                    app:layout_gravity="fill"
                    app:layout_column="3"
                    app:layout_columnSpan="5"
                    app:layout_row="3"
                    app:layout_rowSpan="1"

                    android:hint="@string/prompt_isotaa"
                    android:maxLines="1"
            />

            <TextView
                    android:id="@+id/lc5_out_type"
                    app:layout_gravity="fill"
                    app:layout_column="3"
                    app:layout_columnSpan="5"
                    app:layout_row="4"
                    app:layout_rowSpan="1"
                    android:hint="@string/prompt_outType"
                    android:maxLines="1"
            />


            <RelativeLayout
                    android:id="@+id/button"
                    android:gravity="fill"
                    app:layout_column="0"
                    app:layout_columnSpan="1"
                    app:layout_row="5"
                    app:layout_rowSpan="1"
                    android:layout_marginTop="@dimen/marginCard"

            >
                <View
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_centerVertical="true"
                        android:id="@+id/button_triangle"
                        android:background="@drawable/triangle"
                        android:layout_alignParentStart="true"
                        android:layout_marginEnd="@dimen/marginCard"
                />

                <TextView
                        android:maxLines="1"
                        android:text="@string/more"
                        android:id="@+id/more"
                        android:gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@id/button_triangle"/>
            </RelativeLayout>

            <com.github.aakira.expandablelayout.ExpandableLinearLayout
                    android:id="@+id/expandableLayout"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:orientation="vertical"
                    app:ael_duration="400"
                    app:ael_expanded="false"
                    android:gravity="fill"
                    app:layout_column="3"
                    app:layout_columnSpan="5"
                    app:layout_row="6"
                    app:layout_rowSpan="1"
            >
                <TextView
                        android:id="@+id/lc5_deveui"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_devEUI"
                        android:maxLines="1"
                />

                <TextView
                        android:id="@+id/lc5_appEUI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_appEUI"
                        android:maxLines="1"
                />
                <TextView
                        android:id="@+id/lc5_appKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_appKey"
                        android:maxLines="1"
                />
                <TextView
                        android:id="@+id/lc5_nwkID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_nwkID"
                        android:maxLines="1"
                />
                <TextView
                        android:id="@+id/lc5_devAdr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_devAdr"
                        android:maxLines="1"
                />
                <TextView
                        android:id="@+id/lc5_nwkSKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_nwkSKey"
                        android:maxLines="1"
                />
                <TextView
                        android:id="@+id/lc5_appSKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_appSKey"
                        android:maxLines="1"
                />


            </com.github.aakira.expandablelayout.ExpandableLinearLayout>

        </android.support.v7.widget.GridLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>